# miro-py

./: .gitignore  README.md  pyproject.toml
scripts/: publish.sh
src/miro/board/: __init__.py
