[build-system]
	requires = ["setuptools>=61.0"]
	build-backend = "setuptools.build_meta"

[project]
	name = "miro"
	version = "0.1.0"
	authors = [
		{ name="nightcycle", email="coyer@nightcycle.us" },
	]
	dependencies = [
		"requests~=2.28.2",
	]
	description = "a basic python package for working with miro api"
	readme = "README.md"
	requires-python = ">=3.10"
	classifiers = [
		"Programming Language :: Python :: 3",
		"Operating System :: OS Independent",
	]
